--- a/fortune-teller2/src/main/resources/static/index.html
+++ b/fortune-teller2/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
 <p id='birthMonthLabel' for='birthMonthField'>What's your birth month?</p>
         <input id='birthMonthField' type='number' min="1" max="12"></input>
 <p id='favColorLabel' for='favColorField'>What is your favorite color?</p>
-        <select name="favorite-color" id='favColorField'>
+        <select name="favorite-color" id='favColorField' class='dropdown'>
           <option value="red">Red</option>
           <option value="orange">Orange</option>
           <option value="yellow">Yellow</option>
