updated bootstrap settings

--- a/fortune-teller2/src/main/resources/static/index.html
+++ b/fortune-teller2/src/main/resources/static/index.html
@@ -35,7 +35,7 @@
         <input id='siblingNumberField' type='number' min="0" max="99"></input>
     </div>
     <div class='form-sub'>
-        <br><button id='subButton' type='button' class="btn-lg">Generate Your Fortune!</button>
+        <br><button id='subButton' type='button' class="btn-lg btn-success">Generate Your Fortune!</button>
     </div>
 </form>
 
